--- a/DataFrame3.ipynb
+++ b/DataFrame3.ipynb
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "90897464-37c5-4859-b6f1-ae556571d1c6",
+   "execution_count": 10,
+   "id": "2f8ee83d-d4a0-497d-abf9-ec021d2da295",
    "metadata": {},
    "outputs": [
     {
@@ -37,488 +37,100 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Film</th>\n",
        "      <th>Year</th>\n",
        "      <th>Actor</th>\n",
        "      <th>Director</th>\n",
        "      <th>Box Office</th>\n",
        "      <th>Budget</th>\n",
        "      <th>Bond Actor Salary</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Film</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Dr. No</th>\n",
-       "      <td>1962</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "      <td>448.8</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>From Russia with Love</th>\n",
-       "      <td>1963</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "      <td>543.8</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>1.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Goldfinger</th>\n",
-       "      <td>1964</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Guy Hamilton</td>\n",
-       "      <td>820.4</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Thunderball</th>\n",
-       "      <td>1965</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "      <td>848.1</td>\n",
-       "      <td>41.9</td>\n",
-       "      <td>4.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Casino Royale</th>\n",
-       "      <td>1967</td>\n",
-       "      <td>David Niven</td>\n",
-       "      <td>Ken Hughes</td>\n",
-       "      <td>315.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Year         Actor       Director  Box Office  Budget  \\\n",
-       "Film                                                                           \n",
-       "Dr. No                 1962  Sean Connery  Terence Young       448.8     7.0   \n",
-       "From Russia with Love  1963  Sean Connery  Terence Young       543.8    12.6   \n",
-       "Goldfinger             1964  Sean Connery   Guy Hamilton       820.4    18.6   \n",
-       "Thunderball            1965  Sean Connery  Terence Young       848.1    41.9   \n",
-       "Casino Royale          1967   David Niven     Ken Hughes       315.0    85.0   \n",
-       "\n",
-       "                       Bond Actor Salary  \n",
-       "Film                                      \n",
-       "Dr. No                               0.6  \n",
-       "From Russia with Love                1.6  \n",
-       "Goldfinger                           3.2  \n",
-       "Thunderball                          4.7  \n",
-       "Casino Royale                        NaN  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bond = pd.read_csv(\"jamesbond.csv\", index_col = \"Film\")\n",
-    "bond.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fe1c6c49-e7de-4b4e-bb31-f24af8e9eed6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bond = bond.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7cfeb4ee-08fa-4d63-8ef1-d42ba9e8fdf1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Film</th>\n",
-       "      <th>Actor</th>\n",
-       "      <th>Director</th>\n",
-       "      <th>Box Office</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Bond Actor Salary</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1962</th>\n",
-       "      <td>Dr. No</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "      <td>448.8</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1963</th>\n",
-       "      <td>From Russia with Love</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "      <td>543.8</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>1.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1964</th>\n",
-       "      <td>Goldfinger</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Guy Hamilton</td>\n",
-       "      <td>820.4</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1965</th>\n",
-       "      <td>Thunderball</td>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "      <td>848.1</td>\n",
-       "      <td>41.9</td>\n",
-       "      <td>4.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1967</th>\n",
-       "      <td>Casino Royale</td>\n",
-       "      <td>David Niven</td>\n",
-       "      <td>Ken Hughes</td>\n",
-       "      <td>315.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Film         Actor       Director  Box Office  Budget  \\\n",
-       "Year                                                                           \n",
-       "1962                 Dr. No  Sean Connery  Terence Young       448.8     7.0   \n",
-       "1963  From Russia with Love  Sean Connery  Terence Young       543.8    12.6   \n",
-       "1964             Goldfinger  Sean Connery   Guy Hamilton       820.4    18.6   \n",
-       "1965            Thunderball  Sean Connery  Terence Young       848.1    41.9   \n",
-       "1967          Casino Royale   David Niven     Ken Hughes       315.0    85.0   \n",
-       "\n",
-       "      Bond Actor Salary  \n",
-       "Year                     \n",
-       "1962                0.6  \n",
-       "1963                1.6  \n",
-       "1964                3.2  \n",
-       "1965                4.7  \n",
-       "1967                NaN  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bond = bond.set_index(\"Year\")\n",
-    "bond.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a27bdde4-189d-4e4c-9f90-fb4800fd0058",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bond = bond.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "09da8c88-6d95-46f3-943a-b1f14cf1af10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Film</th>\n",
-       "      <th>Actor</th>\n",
-       "      <th>Director</th>\n",
-       "      <th>Box Office</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1962</td>\n",
        "      <td>Dr. No</td>\n",
+       "      <td>1962</td>\n",
        "      <td>Sean Connery</td>\n",
        "      <td>Terence Young</td>\n",
        "      <td>448.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1963</td>\n",
        "      <td>From Russia with Love</td>\n",
+       "      <td>1963</td>\n",
        "      <td>Sean Connery</td>\n",
        "      <td>Terence Young</td>\n",
        "      <td>543.8</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>1.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1964</td>\n",
        "      <td>Goldfinger</td>\n",
+       "      <td>1964</td>\n",
        "      <td>Sean Connery</td>\n",
        "      <td>Guy Hamilton</td>\n",
        "      <td>820.4</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>3.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1965</td>\n",
        "      <td>Thunderball</td>\n",
+       "      <td>1965</td>\n",
        "      <td>Sean Connery</td>\n",
        "      <td>Terence Young</td>\n",
        "      <td>848.1</td>\n",
+       "      <td>41.9</td>\n",
+       "      <td>4.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1967</td>\n",
        "      <td>Casino Royale</td>\n",
+       "      <td>1967</td>\n",
        "      <td>David Niven</td>\n",
        "      <td>Ken Hughes</td>\n",
        "      <td>315.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year                   Film         Actor       Director  Box Office\n",
-       "0  1962                 Dr. No  Sean Connery  Terence Young       448.8\n",
-       "1  1963  From Russia with Love  Sean Connery  Terence Young       543.8\n",
-       "2  1964             Goldfinger  Sean Connery   Guy Hamilton       820.4\n",
-       "3  1965            Thunderball  Sean Connery  Terence Young       848.1\n",
-       "4  1967          Casino Royale   David Niven     Ken Hughes       315.0"
+       "                    Film  Year         Actor       Director  Box Office  \\\n",
+       "0                 Dr. No  1962  Sean Connery  Terence Young       448.8   \n",
+       "1  From Russia with Love  1963  Sean Connery  Terence Young       543.8   \n",
+       "2             Goldfinger  1964  Sean Connery   Guy Hamilton       820.4   \n",
+       "3            Thunderball  1965  Sean Connery  Terence Young       848.1   \n",
+       "4          Casino Royale  1967   David Niven     Ken Hughes       315.0   \n",
+       "\n",
+       "   Budget  Bond Actor Salary  \n",
+       "0     7.0                0.6  \n",
+       "1    12.6                1.6  \n",
+       "2    18.6                3.2  \n",
+       "3    41.9                4.7  \n",
+       "4    85.0                NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bond.iloc[[0,1,2,3,4],[0,1,2,3,4]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ce933456-98c5-4d4d-9baf-68c90b34aa08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bond = bond.set_index(\"Film\").sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "2b373d51-62b8-4dff-a6a2-260c64b735a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actor</th>\n",
-       "      <th>Director</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Film</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Skyfall</th>\n",
-       "      <td>Daniel Craig</td>\n",
-       "      <td>Sam Mendes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>From Russia with Love</th>\n",
-       "      <td>Sean Connery</td>\n",
-       "      <td>Terence Young</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              Actor       Director\n",
-       "Film                                              \n",
-       "Skyfall                Daniel Craig     Sam Mendes\n",
-       "From Russia with Love  Sean Connery  Terence Young"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bond.loc[[\"Skyfall\", \"From Russia with Love\"],[\"Actor\", \"Director\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d9e474e3-d9ae-497d-a35f-f35338992355",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Director</th>\n",
-       "      <th>Box Office</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Film</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Casino Royale</th>\n",
-       "      <td>Martin Campbell</td>\n",
-       "      <td>581.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Casino Royale</th>\n",
-       "      <td>Ken Hughes</td>\n",
-       "      <td>315.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Director  Box Office\n",
-       "Film                                      \n",
-       "Casino Royale  Martin Campbell       581.5\n",
-       "Casino Royale       Ken Hughes       315.0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bond.iloc[[1,2], [2,3]]"
+    "bond = pd.read_csv(\"jamesbond.csv\")\n",
+    "bond.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82640ab8-8e8b-482f-bcb1-9f324d275894",
+   "id": "d9e474e3-d9ae-497d-a35f-f35338992355",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -590,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -604,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
