--- a/MultiIndex.ipynb
+++ b/MultiIndex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "1aa91135-97e0-49f3-b8e6-ca4bb850698b",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "7226e08b-44ba-4f93-89f8-ec7573ac3f9e",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "c2c5752b-9f10-4a35-9c91-3c731c9a8c05",
    "metadata": {
     "tags": []
@@ -133,7 +133,7 @@
        "[652 rows x 1 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "af8d88eb-aad5-423a-9b69-d566cb9894b4",
    "metadata": {
     "tags": []
@@ -251,7 +251,7 @@
        "[652 rows x 1 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "c2f30e3e-c112-4e9c-b347-6f5164cd9169",
    "metadata": {
     "tags": []
@@ -277,7 +277,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "id": "812c746f-8633-41e6-ba11-072b13bef618",
    "metadata": {
     "tags": []
@@ -360,7 +360,7 @@
        "          2012-07-01                 4.16"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "8aefb549-11db-4f2b-aea7-2ceb13ee0aa8",
    "metadata": {
     "tags": []
@@ -384,7 +384,7 @@
        "FrozenList(['Country', 'Date'])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "1094a420-2553-4d10-8495-fa8fb8c9db52",
    "metadata": {
     "tags": []
@@ -407,7 +407,7 @@
        "('Argentina', Timestamp('2010-01-01 00:00:00'))"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "28ce4629-3a63-4458-84e9-f89717aaf8c5",
    "metadata": {
     "tags": []
@@ -437,7 +437,7 @@
        "              dtype='datetime64[ns]', name='Date', length=652, freq=None)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "5ccaeb3c-7523-4a3f-a347-de14a9c4ccdd",
    "metadata": {
     "tags": []
@@ -465,7 +465,7 @@
        "      dtype='object', name='Country', length=652)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "0c4d9374-9110-4fc0-afc9-60a5b87d4848",
    "metadata": {
     "tags": []
@@ -493,7 +493,7 @@
        "      dtype='object', name='Country', length=652)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "e6141be0-c1a8-4627-9ea1-cad7655a9890",
    "metadata": {
     "tags": []
@@ -534,10 +534,10 @@
        "            (  'Vietnam', '2015-01-01'),\n",
        "            (  'Vietnam', '2015-07-01'),\n",
        "            (  'Vietnam', '2016-01-01')],\n",
-       "           names=['Country Name', 'Time'], length=652)"
+       "           names=['Country', 'Date'], length=652)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "8e13f8c7-88dd-46e4-8e87-93dd7b961faa",
    "metadata": {
     "tags": []
@@ -581,7 +581,7 @@
        "           names=['Country Name', 'Time'], length=652)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "id": "b41c8c68-1ba4-4ce3-a1b2-915828df340e",
    "metadata": {
     "tags": []
@@ -624,7 +624,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nation</th>\n",
-       "      <th>Time</th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -656,7 +656,7 @@
       ],
       "text/plain": [
        "                      Price in US Dollars\n",
-       "Nation    Time                           \n",
+       "Nation    Date                           \n",
        "Argentina 2010-01-01                 1.84\n",
        "          2010-07-01                 3.56\n",
        "          2011-07-01                 4.84\n",
@@ -664,7 +664,7 @@
        "          2012-07-01                 4.16"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "4ee9ef8c-2f57-4aac-98bd-51730b349733",
    "metadata": {
     "tags": []
@@ -708,7 +708,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nation</th>\n",
-       "      <th>Time</th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -767,7 +767,7 @@
       ],
       "text/plain": [
        "                      Price in US Dollars\n",
-       "Nation    Time                           \n",
+       "Nation    Date                           \n",
        "Vietnam   2016-01-01                 2.67\n",
        "          2015-07-01                 2.75\n",
        "          2015-01-01                 2.81\n",
@@ -783,7 +783,7 @@
        "[652 rows x 1 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "e420eb9c-da34-4ae4-bde6-466010163142",
    "metadata": {
     "tags": []
@@ -826,7 +826,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nation</th>\n",
-       "      <th>Time</th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -885,7 +885,7 @@
       ],
       "text/plain": [
        "                      Price in US Dollars\n",
-       "Nation    Time                           \n",
+       "Nation    Date                           \n",
        "Vietnam   2014-01-01                 2.84\n",
        "          2014-07-01                 2.83\n",
        "          2015-01-01                 2.81\n",
@@ -901,7 +901,7 @@
        "[652 rows x 1 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "id": "18e505cc-8c4c-45ea-af3f-7e5c9d9d1acc",
    "metadata": {
     "tags": []
@@ -925,7 +925,7 @@
        "Name: (Argentina, 2011-07-01 00:00:00), dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "id": "b126f032-70b3-4491-abe7-90087b8b741c",
    "metadata": {
     "tags": []
@@ -949,7 +949,7 @@
        "Name: (Argentina, 2014-01-01 00:00:00), dtype: float64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "id": "30aa38ee-e4fa-4d4f-9870-e4368c580232",
    "metadata": {
     "tags": []
@@ -990,7 +990,7 @@
        "      <th>Price in US Dollars</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Time</th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1049,7 +1049,7 @@
       ],
       "text/plain": [
        "            Price in US Dollars\n",
-       "Time                           \n",
+       "Date                           \n",
        "2010-01-01                 1.84\n",
        "2010-07-01                 3.56\n",
        "2011-07-01                 4.84\n",
@@ -1064,7 +1064,7 @@
        "2016-01-01                 2.39"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "396d3d0f-e570-4df6-b988-75faa5807aa0",
+   "id": "274f2579",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1084,9 +1084,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sagemaker-distribution:Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-sagemaker-distribution-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1098,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
