--- a/DataFrame1.ipynb
+++ b/DataFrame1.ipynb
@@ -3708,9 +3708,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda-default:Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-default-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3722,7 +3722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
